# PRISM

./: .gitignore  PROGRESS.md  README.md  program.md  pyproject.toml
configs/eval/: benchmarks.yaml
configs/model/: prism_0.8b.yaml
configs/training/: stage0_lora.yaml  stage1_minimal.yaml  stage2_full.yaml
memory/: MEMORY.md  environment.md  motivation.md  project_overview.md  user_profile.md
results/pilot/ablation/: A0_baseline_qwen_eval.json  A1_uniform_eval.json  A2_trained_router_eval.json  A3_crossphase_eval.json  A4_hard_routing_eval.json  A5_joint_ft_eval.json  A6_clean_pilot_jft_eval.json  A7_clean_pilot_jft_fixed_eval.json
results/traces/: algebra_stats.json  combinatorics_stats.json  geometry_stats.json  number_theory_stats.json
results/traces/poc/: algebra_stats.json  combinatorics_stats.json  geometry_stats.json  number_theory_stats.json
scripts/: ablation_routing_pilot.sh  chain_watcher.sh  eval_a6_parallel.sh  eval_all.sh  eval_pilot.sh  generate_rounds23.sh  generate_traces.sh  joint_finetune_pilot.sh  pilot_clean_redo.sh  poc_trace_gen.py  regen_geometry_pilot.sh  resume_trace_gen.sh  run_pilot.sh  run_trace_gen.sh  start_vllm_servers.sh  train_expert_blocks_pilot.sh  train_stage0.sh  train_stage0_lora.sh  watch_progress.sh
scripts/setup/: env.sh
src/prism/: __init__.py
src/prism/data/: __init__.py  collator.py  datasets.py  domain_split.py  trace_format.py  validate_traces.py
src/prism/eval/: __init__.py  ablations.py  eval_prism.py  math_eval.py  metrics.py
src/prism/generation/: __init__.py  phase_prompts.py  trace_generator.py
(+15 files in other folders)
